# arXivTD

./: .gitignore  docker-compose.yml  package-lock.json  package.json
cli/: LICENSE  README.md  pyproject.toml
cli/src/arxivtd/: __init__.py  cli.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/cli/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/documentation/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/pricing/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/scans/[id]/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/: CitationGraph.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx
frontend/src/lib/: api.ts
